[package]
name = "bitgo_api"
version = "0.1.6"
edition = "2018"

[dependencies]
structopt = { version = "0.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
thiserror = "1.0.26"
log = "0.4.14"